Fixed search bar alignment on header.scss.

--- a/_src/scss/theme/partials/_header.scss
+++ b/_src/scss/theme/partials/_header.scss
@@ -41,10 +41,10 @@
 			padding-bottom: 0;
 			
 			input {
-				margin-top: 12px;
 				width: 65%;
 			}
 			.button {
+				margin-top: 0;
 				width: 30%;
 			}
 		}
